--- a/src/assets/i18n/uz_cyrl.json
+++ b/src/assets/i18n/uz_cyrl.json
@@ -1,5 +1,6 @@
 {
     "header": {
+        "pages": "Саҳифалар",
         "home": "Бош саҳифа",
         "products": "Маҳсулотлар",
         "aboutCompany": "Компания ҳақида",
