--- a/src/assets/i18n/uz_cyrl.json
+++ b/src/assets/i18n/uz_cyrl.json
@@ -11,7 +11,7 @@
     "productDetail": {
         "fillForm": "Буюртма учун формани тўлдиринг",
         "fullName": "Исм Фамилия",
-        "mobilePhone": "Телефон рақами",
+        "minLength": "Телефон рақамини тўлиқ киритинг",
         "sendNow": "Жўнатиш",
         "required": "Бу майдонни тўлдириш мажбурий",
         "similarProducts": "Ўхшаш товарлар",
@@ -25,7 +25,7 @@
             "messageAdmin": "Барча саволлар учун компаниямиз операторларига мурожаат қилинг",
             "messageText": "Хабар матни",
             "fullName": "Исм Фамилия",
-            "mobilePhone": "Телефон рақами",
+            "minLength": "Телефон рақамини тўлиқ киритинг",
             "required": "Бу майдонни тўлдириш мажбурий",
             "sendNow": "Жўнатиш"
         },
